@@ -48,6 +48,7 @@
             <artifactId>miglayout-swing</artifactId>
             <version>11.4.2</version>
         </dependency>
+        
     </dependencies>
     <build>
     <plugins>
@@ -55,6 +56,28 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.13.0</version>
+        </plugin>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>3.6.0</version>
+            <configuration>
+                <executable>java</executable>
+                <arguments>
+                    <argument>--enable-native-access=ALL-UNNAMED</argument>
+                    <argument>-classpath</argument>
+                    <classpath />
+                    <argument>com.ahp.Main</argument>
+                </arguments>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.2.1</version>
+            <configuration>
+                <argLine>--enable-native-access=ALL-UNNAMED</argLine>
+            </configuration>
         </plugin>
     </plugins>
 </build>
